# folder_stat

./: .hgignore  INSTALL.txt  README.txt
cmake/: cxx_flag_overrides.cmake
src/core/: fs_cacher.cpp  fs_cacher.h  fs_collector.cpp  fs_collector.h  fs_stat_data.cpp  fs_stat_data.h
src/gui/: CMakeLists.txt  folder_stat_window.cpp  folder_stat_window.h  fs_dirs_tree_view.cpp  fs_dirs_tree_view.h  fs_dirs_tree_widget.cpp  fs_dirs_tree_widget.h  fs_lightweight_icon_provider.h  fs_main_window.cpp  fs_main_window.h  fs_nofiier.cpp  fs_nofiier.h  fs_settings_data.h  fs_settings_dialog.cpp  fs_settings_dialog.h  fs_stat_table_model.cpp  fs_stat_table_model.h  fs_stat_table_widget.cpp  fs_stat_table_widget.h  fs_tray.h  main.cpp
src/gui/resources/: folder_stat_gui.rc  folder_stat_window.qrc  fs_main_window.qrc
src/gui/ui/: fs_main_window.ui  fs_settings_dialog.ui
src/test/: CMakeLists.txt  fs_cacher_test.cpp  fs_cacher_test.h  fs_collector_test.cpp  fs_collector_test.h  fs_stat_data_test.cpp  fs_stat_data_test.h  fs_test_utils.cpp  fs_test_utils.h  main.cpp
